Create task and tasks list

--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -1,1 +1,10 @@
-<p>new-task works!</p>
+
+<input
+type="text"
+id="new-task"
+class="new-task"
+autofocus
+(keyup.enter)="addTask()"
+placeholder="Whats needs to be done?"
+[formControl]="textField"/>
+
