Añadir selector de tareas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<tsk-new-task></tsk-new-task>
-<tsk-tasks></tsk-tasks>
+<section class="todoapp">
+  <header class="header">
+    <h1>todos</h1>
+    <tsk-new-task></tsk-new-task>
+  </header>
+  <tsk-tasks></tsk-tasks>
+  <tsk-footer></tsk-footer>
+</section>
