--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer id="footer" class="footer">
+  <span id="todo-count" class="todo-count">0 items left</span>
+  <ul id="filters" class="filters">
+    <li>
+      <a (click)="doFilter('SHOW_ALL')">
+        All
+      </a>
+    </li>
+    <li>
+      <a (click)="doFilter('SHOW_ACTIVE')">
+        Active
+      </a>
+    </li>
+    <li>
+      <a (click)="doFilter('SHOW_DONE')">
+        Completed
+      </a>
+    </li>
+  </ul>
+  <button id="clear-completed" class="clear-completed">Clear completed</button>
+</footer>
