--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,5 @@
-<ul>
-  <tsk-task *ngFor="let elem of tasks" [task]="elem"></tsk-task>
-</ul>
+<section id="main" class="main">
+  <ul id="todo-list" class="todo-list">
+    <tsk-task *ngFor="let elem of tasks" [task]="elem"></tsk-task>
+  </ul>
+</section>
